# libimobiledevice-rs

./: .gitignore  Cargo.toml  README.md  commands.md
libimobiledevice/: Cargo.toml  README.md  build.rs  libimobiledevice_wrapper.h
libimobiledevice/examples/: idevice_event.rs  idevice_id.rs  idevicebackup2.rs  ideviceinfo.rs
libimobiledevice/src/: afc.rs  ffi.rs  idevice.rs  installation_proxy.rs  lib.rs  lockdownd.rs  mobilebackup2.rs  notification_proxy.rs  wrapper.h
libplist/: Cargo.toml  README.md  build.rs  libplist_wrapper.h
libplist/src/: ffi.rs  lib.rs  plist.rs
